@@ -1,3 +1,12 @@
+Mon Jun 16 22:00:01 2003  John Tytgat <John.Tytgat@aaug.net>
+
+	* source/clib/signal.h: Changed SISERR into SISOSERROR in order to
+	  be compatible with SharedCLibrary.
+	* source/clib/unixlib/asm_dec.s: Likewise.
+	* source/signal/_signal.s: Likewise.
+	* source/signal/signame.c: Likewise.
+	* source/sys/exec.c: Likewise.
+
 Sat Jun  7 09:31:05 2003  Alex Waugh  <alex@alexwaugh.com>
 
 	* sys/_alloca.s: Fix non 32bit code.
